make page SEO-friendly

--- a/learnmore.html
+++ b/learnmore.html
@@ -28,28 +28,29 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1><i class="fa-solid fa-clapperboard"></i> History of film</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <img src="img/movie.jpg" class="img-fluid" alt="camera" title="Camera"/>
-        </div>
-
-        <div class="col-sm-6">
-          <p>
-            No one person invented cinema. However, in 1891 the Edison Company
-            successfully demonstrated a prototype of the Kinetoscope, which
-            enabled one person at a time to view moving pictures.
-          </p>
-          <p>
-            The first public Kinetoscope demonstration took place in 1893. By
-            1894 the Kinetoscope was a commercial success, with public parlours
-            established around the world.
-          </p>
-        </div>
-      </div>
-    </div>
-
+    <h1>
+      <i class="fa-solid fa-clapperboard"></i> History of film
+      <br />
+    </h1>
+    <ol class="about_films">
+      <h4>If you want know more follow this links:</h4>
+      <li>
+        <i class="fa-solid fa-film"></i>
+        <a
+          href="https://www.scienceandmediamuseum.org.uk/objects-and-stories/very-short-history-of-cinema"
+          target="_blank"
+          >A very short history of cinema</a
+        >
+      </li>
+      <li>
+        <i class="fa-solid fa-video"></i>
+        <a href="https://www.studiobinder.com/blog/the-history-of-film-timeline/" target="_blank">The History of Film Timeline</a>
+      </li>
+      <li>
+        <i class="fa-solid fa-tv"></i>
+        <a href="https://en.wikipedia.org/wiki/History_of_film" target="_blank">History of film</a>
+      </li>
+    </ol>
     <ul class="links">
       <li>
         <a href="index.html">Homepage</a>
