--- a/photo.html
+++ b/photo.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="canonical" href="https://historyofcinema.com/film/cinematography" />
+    <meta
+      ="description"
+      content="A page for getting acquainted with the history of cinema"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>A short history of cinematography for everyone who interested in how
+      cinema technologies developed</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -14,16 +20,25 @@
       src="https://kit.fontawesome.com/5cfafcc03b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/styling/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1><i class="fa-solid fa-clapperboard"></i> History of film</h1>
-   <img src="/img/1567117648031.jpg"  class="img-thumbnail hist_img"/>
-   <div class="links">
-    <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>    
-</div>
+    <h4>Example of films production process:</h4>
+   <img src="img/1567117648031.jpg"  class="img-thumbnail hist_img" alt="How first films was created" title="Film production"/>
+   <ul class="links">
+    <li>
+      <a href="index.html">Homepage</a>
+    </li>
+
+    <li>
+      <a href="photo.html">Photo</a>
+    </li>
+
+    <li>
+      <a href="learnmore.html">Learn more</a>
+    </li>
+  </ul>
     
   </body>
 </html>
