--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      A short history of cinematography for everyone who interested in how
-      cinema technologies developed
+      A short history of cinematography for everyone 
     </title>
     <link
       rel="stylesheet"
