--- a/photo.html
+++ b/photo.html
@@ -8,8 +8,7 @@
       content="A page for getting acquainted with the history of cinema"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A short history of cinematography for everyone who interested in how
-      cinema technologies developed</title>
+    <title>A short history of cinematography for everyone</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
