--- a/learnmore.html
+++ b/learnmore.html
@@ -7,13 +7,11 @@
       href="https://historyofcinema.com/film/cinematography"
     />
     <meta
-      ="description"
+      name="description"
       content="A page for getting acquainted with the history of cinema"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      A short history of cinematography for everyone 
-    </title>
+    <title>A short history of cinematography for everyone</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -43,11 +41,17 @@
       </li>
       <li>
         <i class="fa-solid fa-video"></i>
-        <a href="https://www.studiobinder.com/blog/the-history-of-film-timeline/" target="_blank">The History of Film Timeline</a>
+        <a
+          href="https://www.studiobinder.com/blog/the-history-of-film-timeline/"
+          target="_blank"
+          >The History of Film Timeline</a
+        >
       </li>
       <li>
         <i class="fa-solid fa-tv"></i>
-        <a href="https://en.wikipedia.org/wiki/History_of_film" target="_blank">History of film</a>
+        <a href="https://en.wikipedia.org/wiki/History_of_film" target="_blank"
+          >History of film</a
+        >
       </li>
     </ol>
     <ul class="links">
