--- a/photo.html
+++ b/photo.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="canonical" href="https://historyofcinema.com/film/cinematography" />
+    <link
+      rel="canonical"
+      href="https://historyofcinema.com/film/cinematography"
+    />
     <meta
-      ="description"
+      name="description"
       content="A page for getting acquainted with the history of cinema"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,20 +27,24 @@
   <body>
     <h1><i class="fa-solid fa-clapperboard"></i> History of film</h1>
     <h4>Example of films production process:</h4>
-   <img src="img/1567117648031.jpg"  class="img-thumbnail hist_img" alt="How first films was created" title="Film production"/>
-   <ul class="links">
-    <li>
-      <a href="index.html">Homepage</a>
-    </li>
+    <img
+      src="img/1567117648031.jpg"
+      class="img-thumbnail hist_img"
+      alt="How first films was created"
+      title="Film production"
+    />
+    <ul class="links">
+      <li>
+        <a href="index.html">Homepage</a>
+      </li>
 
-    <li>
-      <a href="photo.html">Photo</a>
-    </li>
+      <li>
+        <a href="photo.html">Photo</a>
+      </li>
 
-    <li>
-      <a href="learnmore.html">Learn more</a>
-    </li>
-  </ul>
-    
+      <li>
+        <a href="learnmore.html">Learn more</a>
+      </li>
+    </ul>
   </body>
 </html>
