--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
       href="https://historyofcinema.com/film/cinematography"
     />
     <meta
-      ="description"
+      name="description"
       content="A page for getting acquainted with the history of cinema"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      A short history of cinematography for everyone 
-    </title>
+    <title>A short history of cinematography for everyone</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -31,7 +29,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="img/movie.jpg" class="img-fluid" alt="camera" title="Camera"/>
+          <img
+            src="img/movie.jpg"
+            class="img-fluid"
+            alt="camera"
+            title="Camera"
+          />
         </div>
 
         <div class="col-sm-6">
